--- a/src/assets/styles/scss/_config.scss
+++ b/src/assets/styles/scss/_config.scss
@@ -152,5 +152,6 @@ $f-heading: 30px;
 
 $border-radius: 4px;
 $easing: cubic-bezier(0.645,0.045,0.355,1);
+$easeOutCirc: cubic-bezier(0, 0.55, 0.45, 1);
 $transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
 $nav-scroll-height: 70px;
