--- a/src/assets/styles/scss/_loader.scss
+++ b/src/assets/styles/scss/_loader.scss
@@ -18,6 +18,7 @@
     justify-content: center;
     width: max-content;
     max-width: 120px;
+    opacity: 0;
 
     & svg {
         width: 100%;
