--- a/src/assets/styles/css/style.css
+++ b/src/assets/styles/css/style.css
@@ -1,52 +1,3 @@
-/* Fonts */
-@font-face {
-  font-family: "Calibre";
-  src: local("Calibre-Regular"), local("CalibreRegular"), local("Calibre Regular"), url("../../fonts/Calibre/Calibre-Regular.woff2") format("woff2"), url("../../fonts/Calibre/Calibre-Regular.woff") format("woff"), url("../../fonts/Calibre/Calibre-Regular.ttf") format("truetype");
-  /* Safari, Android, iOS */
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Calibre";
-  src: local("Calibre-Regular-Italic"), local("Calibre-RegularItalic"), local("Calibre Regular-Italic"), local("Calibre RegularItalic"), url("../../fonts/Calibre/Calibre-RegularItalic.woff2") format("woff2"), url("../../fonts/Calibre/Calibre-RegularItalic.woff") format("woff"), url("../../fonts/Calibre/Calibre-RegularItalic.ttf") format("truetype");
-  /* Safari, Android, iOS */
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Calibre";
-  src: local("Calibre-Medium"), local("CalibreMedium"), local("Calibre Medium"), url("../../fonts/Calibre/Calibre-Medium.woff2") format("woff2"), url("../../fonts/Calibre/Calibre-Medium.woff") format("woff"), url("../../fonts/Calibre/Calibre-Medium.ttf") format("truetype");
-  /* Safari, Android, iOS */
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Calibre";
-  src: local("Calibre-Medium-Italic"), local("CalibreMediumItalic"), local("Calibre MediumItalic"), local("Calibre-MediumItalic"), url("../../fonts/Calibre/Calibre-MediumItalic.woff2") format("woff2"), url("../../fonts/Calibre/Calibre-MediumItalic.woff") format("woff"), url("../../fonts/Calibre/Calibre-MediumItalic.ttf") format("truetype");
-  /* Safari, Android, iOS */
-  font-weight: 500;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Calibre";
-  src: local("Calibre-Semibold"), local("CalibreSemibold"), local("Calibre Semibold"), url("../../fonts/Calibre/Calibre-Semibold.woff2") format("woff2"), url("../../fonts/Calibre/Calibre-Semibold.woff") format("woff"), url("../../fonts/Calibre/Calibre-Semibold.ttf") format("truetype");
-  /* Safari, Android, iOS */
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Calibre";
-  src: local("Calibre-Semibold-Italic"), local("CalibreSemiboldItalic"), local("Calibre SemiboldItalic"), local("Calibre-SemiboldItalic"), url("../../fonts/Calibre/Calibre-SemiboldItalic.woff2") format("woff2"), url("../../fonts/Calibre/Calibre-SemiboldItalic.woff") format("woff"), url("../../fonts/Calibre/Calibre-SemiboldItalic.ttf") format("truetype");
-  /* Safari, Android, iOS */
-  font-weight: 500;
-  font-style: italic;
-}
-
 @font-face {
   font-family: "SF Mono";
   src: local("SF Mono"), local("SFMono"), local("SF-Mono"), url("../../fonts/SFMono/SFMono-Regular.woff2") format("woff2"), url("../../fonts/SFMono/SFMono-Regular.woff") format("woff"), url("../../fonts/SFMono/SFMono-Regular.ttf") format("truetype");
@@ -82,10 +33,27 @@
 /* Colors */
 /* Font Size */
 /* Other */
+
+:root {
+  --accent: #238636;
+  --color-btn-primary-bg: #238636;
+  --color-btn-primary-border: rgba(240,246,252,0.1);
+  --color-btn-primary-shadow: 0 0 transparent;
+  --color-btn-primary-inset-shadow: 0 0 transparent;
+  --color-btn-primary-hover-bg: #2ea043;
+  --color-btn-primary-hover-border: rgba(240,246,252,0.1);
+  --color-btn-primary-disabled-border: rgba(240,246,252,0.1);
+  --color-btn-primary-focus-bg: #238636;
+  --color-btn-primary-focus-border: rgba(240,246,252,0.1);
+  --color-btn-primary-focus-shadow: 0 0 0 3px rgba(46,164,79,0.4);
+  --color-btn-primary-text: #ffffff;
+  --color-btn-primary-counter-bg: rgba(255,255,255,0.2);
+}
+
 html {
   box-sizing: border-box;
   width: 100%;
-  background-color: #0a192f;
+  background-color: #040d21;
 }
 
 *,
@@ -99,11 +67,6 @@ html {
   color: #ccd6f6;
 }
 
-:focus {
-  outline: 2px dashed #64ffda;
-  outline-offset: 3px;
-}
-
 /* Scrollbar */
 html {
   scrollbar-width: thin;
@@ -115,7 +78,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #0a192f;
+  background: #040d21;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -131,9 +94,9 @@ body {
   overflow-x: hidden;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  background-color: #020c1b;
+  background-color: #040d21;
   color: #8892b0;
-  font-family: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, system-ui, sans-serif;
+  font-family: 'Alliance No.1', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 20px;
   line-height: 1.3;
 }
@@ -145,7 +108,7 @@ body {
 }
 
 body.loaded {
-  background-color: #0a192f;
+  background-color: #040d21;
   transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
@@ -247,15 +210,18 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: 'Alliance No.1', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   margin: 0 0 10px 0;
   font-weight: 600;
-  color: #ccd6f6;
+  color: #FFFFFF;
   line-height: 1.1;
 }
 
 .big-heading {
   margin: 0;
   font-size: clamp(40px, 8vw, 80px);
+  font-weight: 800;
+  letter-spacing: 0.1rem;
 }
 
 .medium-heading {
@@ -267,10 +233,16 @@ h6 {
   display: flex;
   align-items: center;
   position: relative;
-  margin: 10px 0 40px;
+  margin: 10px 0 30px;
   width: 100px;
   font-size: clamp(26px, 5vw, 30px);
   white-space: nowrap;
+}
+
+.numbered-heading .text {
+  margin-top: -15px;
+  font-family: 'Alliance No.1', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-weight: 800;
 }
 
 img,
@@ -310,7 +282,7 @@ a:hover, a:focus {
 }
 
 code {
-  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   font-size: 16px;
 }
 
@@ -322,7 +294,7 @@ code {
   color: #64ffda;
   margin: 0 0 20px 0;
   font-size: 16px;
-  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   font-weight: 400;
   line-height: 1.5;
 }
@@ -359,14 +331,13 @@ code {
   white-space: nowrap;
 }
 
-.numbered-heading:before {
+.numbered-heading span { margin: 0; }
+.numbered-heading .number {
   position: relative;
   bottom: 4px;
-  counter-increment: section;
-  content: "0" counter(section) ".";
   margin-right: 10px;
   color: #64ffda;
-  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   font-size: clamp(16px, 3vw, 20px);
   font-weight: 400;
 }
@@ -485,7 +456,7 @@ FAST TRANSITIONS
 /* Fade Down */
 .fastfadedown-enter {
   opacity: 0.01;
-  transform: translateY(-20px);
+  transform: translateY(-60px);
   transition: opacity 500ms cubic-bezier(0, 0.55, 0.45, 1), transform 500ms cubic-bezier(0, 0.55, 0.45, 1);
 }
 
@@ -498,7 +469,7 @@ FAST TRANSITIONS
 /* Fade Up */
 .fastfadeup-enter {
   opacity: 0.01;
-  transform: translateY(20px);
+  transform: translateY(60px);
   transition: opacity 500ms cubic-bezier(0, 0.55, 0.45, 1), transform 500ms cubic-bezier(0, 0.55, 0.45, 1);
 }
 
@@ -527,7 +498,7 @@ FAST TRANSITIONS
   align-items: center;
   justify-content: center;
   width: max-content;
-  max-width: 120px;
+  max-width: 400px;
   opacity: 0;
 }
 
@@ -537,4 +508,8 @@ FAST TRANSITIONS
   display: block;
   margin: 0 auto;
   fill: none;
+}
+
+.accent {
+  color: var(--accent);
 }
